Fixed centering on header box so that name box and links box margins align with main content box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+.CenterHeader {
+  position: relative;
+  margin: auto;
+  width: 960px;
+}
+
 .HeaderBox {
   position: relative;
   top: 0px;
@@ -9,7 +15,7 @@
 
 .NameBox {
   position: relative;
-  left: 100px;
+  left: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
